<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur_background"
    tools:context="com.hitachi_tstv.yodpanom.yaowaluk.authendemo.MainActivity">
    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:background="#000000"
        android:padding="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner" />
    <RelativeLayout
        android:id="@+id/headerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="10dip" >

        <TextView
            android:id="@+id/headerMessage"
            style="@style/HeaderStyleV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/upgradeBtn"
            android:text="@string/layout_main_title" />

        <ImageView
            android:id="@+id/upgradeBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/upgrade_button_state" />
    </RelativeLayout>

    <!-- username entry -->

    <LinearLayout
        android:id="@+id/usernameview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerlayout"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            android:text="@string/layout_main_label_username" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/EditTextRegularStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter username"
            android:text="admin" />
    </LinearLayout>

    <!-- password entry -->

    <LinearLayout
        android:id="@+id/passwordview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameview"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="3dip"
        android:orientation="horizontal" >

        <TextView
            style="@style/TextViewLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            android:text="@string/layout_main_label_password" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/EditTextPasswordStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Enter password" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordview"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/red_button"
            android:text="Confirm"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/black_button"
            android:text="Cancel"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/rempasswordcheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonsview"
        android:layout_marginTop="10dip"
        android:text="@string/layout_main_check_isremembered"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/notificationcheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rempasswordcheckbox"
        android:text="@string/layout_main_check_run_notification"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/webservicelogincheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationcheckbox"
        android:text="@string/layout_main_check_webservice_login"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/webservicelogincheckbox"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Sign up here"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/splashImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        android:visibility="gone" />

</RelativeLayout>
